# website

./: .gitignore  .prettierignore  .prettierrc  CLAUDE.md  Caddyfile  README.md  REFACTORING-PLAN.md  index.html  migrate-blog.js  package-lock.json  package.json  pyproject.toml  ruff.toml  tsconfig.json  tsconfig.scripts.json  vite.config.js  vite.config.mjs  vite.config.ts  wrangler.content-meta.jsonc  wrangler.country-detection.jsonc  wrangler.jsonc  wrangler.toml
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml  question.yml
.github/workflows/: ci.yml  external-link-check.yml  label-issues.yml  python-snippet-validation.yml  python-typecheck.yml  python-validation.yml  update-github-stats.yml
.storybook/: ProductThemeDecorator.tsx  main.ts  preview-head.html  preview.ts  preview.tsx
api2mdx/: README.md  pyproject.toml
api2mdx/api2mdx/: README.md  api_discovery.py  documentation_generator.py  meta.py  models.py  parser_test.py  type_extractor.py  type_model_test.py
api2mdx/scripts/: regenerate_snapshots.py
cachedHTTP/: README.md  pyproject.toml
cassettes/: docs_mirascope_v2_examples_intro_decorator_async.py.yaml  docs_mirascope_v2_examples_intro_decorator_async_stream.py.yaml  docs_mirascope_v2_examples_intro_decorator_stream.py.yaml  docs_mirascope_v2_examples_intro_decorator_sync.py.yaml  docs_mirascope_v2_examples_intro_format_decorator.py.yaml  docs_mirascope_v2_examples_intro_format_model.py.yaml  docs_mirascope_v2_examples_intro_model_async.py.yaml  docs_mirascope_v2_examples_intro_model_async_stream.py.yaml  docs_mirascope_v2_examples_intro_model_stream.py.yaml  docs_mirascope_v2_examples_intro_model_sync.py.yaml  docs_mirascope_v2_examples_intro_override_decorator.py.yaml  docs_mirascope_v2_examples_intro_override_model.py.yaml  docs_mirascope_v2_examples_intro_parameters_decorator.py.yaml  docs_mirascope_v2_examples_intro_parameters_model.py.yaml  docs_mirascope_v2_examples_intro_resume_decorator.py.yaml  docs_mirascope_v2_examples_intro_resume_model.py.yaml  docs_mirascope_v2_examples_intro_system_messages_decorator.py.yaml  docs_mirascope_v2_examples_intro_system_messages_model.py.yaml  docs_mirascope_v2_examples_intro_tool_call_decorator.py.yaml  docs_mirascope_v2_examples_intro_tool_call_model.py.yaml
cloudflare/: content-meta-cors.ts  country-detection.ts  tsconfig.json  worker.js  worker.ts
cloudflare/handlers/: content-meta-cors.ts  join-router-waitlist.ts
content/: llms_full_spec.json
content/blog/: advanced-prompt-engineering.mdx  (+40 more)
docs/: llms.txt
mirascope-ui/: manifest.json
old_lilypad_docs/: README.md  experiments.md  pricing.md  vibe-synthesis.md
public/: _redirects  manifest.json  robots.txt  seo-metadata.json
scripts/: check-cassettes.ts  check-ts.js  content-middleware.ts  extract-seo-metadata.ts  extract-snippets.ts  fetch-github-stats.ts  generate-api-docs.ts  generate-llms-full.ts  generate-og-html.ts  generate-og-images.ts  generate-snippets.ts  lint-python.sh  optimize-images.ts  preprocess-content.ts  record-cached-http.ts  record-vcr-cassettes.ts  record-vcrpy-cassettes.ts  serve-static.js  serve-static.ts  start.js  substitute-code.js  sync-docs.ts  test-prerender.ts  typecheck-snippets.sh  update-extracted-snippets.ts  update-snippets.ts  validate-assets.ts  validate-cassettes.ts  validate-external-links.ts  validate-links.ts  validate-mdx.ts  validate-snippets.sh  vite-prerender.ts
src/: main.tsx  nav.css  paper-texture.css  reportWebVitals.ts  routeTree.gen.ts  styles.css  themes.css
vcrRec/: README.md  pyproject.toml
(+2012 files in other folders)
