[project]
name = "mirascope-website-python"
version = "0.1.0"
description = "Python tools and code snippets for Mirascope website"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    # Core dependencies
    "mirascope>=1.25.0",
    "pydantic>=2.7.4,<3.0",
    "griffe>=1.7.2",
    "tomli>=2.2.1",
    "pymdown-extensions>=10.5.0",
    "lilypad-sdk>=0.8.1",
]

[project.optional-dependencies]
# All mirascope dependencies for API docs generation and examples
mirascope-all = [
    # Provider dependencies
    "openai>=1.6.0,<2",
    "anthropic>=0.29.0,<1.0",
    "mistralai>=1.0.0,<2",
    "cohere>=5.5.8,<6",
    "groq>=0.9.0,<1",
    "litellm>=1.42.12,<2",
    "azure-ai-inference>=1.0.0b4,<2.0",
    "aiohttp>=3.10.5,<4.0",
    "boto3>=1.34.70,<2",
    "boto3-stubs[bedrock-runtime]>=1.35.32,<2",
    "aiobotocore>=2.12.1,<3",
    "aioboto3>=13.1.1,<14",
    "types-aioboto3[bedrock-runtime]>=13.1.1,<14",
    "google-generativeai>=0.4.0,<1",
    "google-genai>=1.2.0,<2",
    "proto-plus>=1.24.0",
    "google-cloud-aiplatform>=1.38.0,<2",
    "vertexai>=0.1.0",
    "pillow>=10.4.0,<11",
    "pydub>=0.25.1,<1.0",

    # Observability dependencies
    "tenacity>=8.4.2,<9",

    # Realtime and other dependencies
    "numpy>=1.26.4,<2",
    "sounddevice>=0.5.1,<1",
    "websockets>=13.1,<14",
    "mcp>=1.6.0",

    # Additional dependencies
    "sqlmodel>=0.0.14,<0.1",
    "sqlalchemy>=2.0.0,<3.0",
    "fastapi>=0.115.12,<1",
]

[tool.uv]
dev-dependencies = ["pyright>=1.1.396", "ruff>=0.1.6", "pytest>=8.3.5"]

[tool.pyright]
include = [".extracted-snippets", "public/examples", "scripts/apigen"]
exclude = ["**/__pycache__"]
