[project]
name = "vcrrec"
version = "0.1.0"
description = "Record VCR.py cassettes to cache LLM API calls"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mirascope[anthropic]==2.0.0a2",
    "vcrpy==7.0.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
]